--- a/OrgsAlura/app/src/main/res/layout/product_item.xml
+++ b/OrgsAlura/app/src/main/res/layout/product_item.xml
@@ -56,7 +56,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginBottom="16dp"
             android:fontFamily="@font/montserrat_alternates_medium"
-            android:textColor="#4CAF50"
+            android:textColor="#43A047"
             android:textSize="18sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
