--- a/OrgsAlura/app/src/main/res/layout/activity_lista_produtos.xml
+++ b/OrgsAlura/app/src/main/res/layout/activity_lista_produtos.xml
@@ -18,20 +18,21 @@
 
         />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/floating_action_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
+        android:backgroundTint="@android:color/holo_blue_dark"
         android:clickable="true"
         android:focusable="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/ic_action_add"
+        android:gravity="bottom|center"
+        android:text="@string/novo_produto"
         android:tint="@color/black"
-        android:backgroundTint="@android:color/holo_blue_dark"
-
-        />
+        app:icon="@drawable/ic_action_add"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
